# EFKE

./: .gitignore  LICENSE  README.md  WIKI_PROMPT_TEMPLATE.md  金融投資維基_MiMo.md
.github/workflows/: test.yml
docs/: WIKI_SCHEMA.md  evidence_first_knowledge_engine_spec_v1.md
release/: CHANGELOG.md
release/Server/: .env.example  README.md  launcher.bat  launcher.sh  requirements-server.txt
release/Server/app/: main.py
release/Server/rust-tools/: Cargo.toml
release/Server/rust-tools/src/: chunk.rs  hash.rs  meta.rs  scan.rs
release/Server/scripts/: backup.sh  install.bat  install.sh  install_keep_open.sh  rebuild_index.sh  restore.sh  start.bat  start.sh  start_keep_open.sh  status_keep_open.sh  stop.bat  stop.sh  test.sh  update.sh
release/User/: .env.example  README.md  launcher.bat  launcher.sh  requirements-user.txt
release/User/app/: main.py
release/User/app/static/: app.js  index.html  styles.css
release/User/scripts/: check_remote_keep_open.sh  install.bat  install.sh  install_keep_open.sh  start.bat  start.sh  start_keep_open.sh  stop.bat  stop.sh  test.sh  update.sh
